--- a/HTML/class 2/semantic.html
+++ b/HTML/class 2/semantic.html
@@ -22,7 +22,7 @@
     </div>
   </section>
   <footer>
-    <p>copy rights @2023 Pramod Kumar</p>
+    <p>copy rights @2023 Jagadiswar Majhee</p>
   </footer>
 </body>
 </html>
