--- a/HTML/class 2/form.html
+++ b/HTML/class 2/form.html
@@ -11,22 +11,20 @@
         <input type="text" id="name" name="name" placeholder="Add your name"/><br>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="Add your email"/><br>
-
-        <select name="gender" id="gender">
+         <select name="gender" id="gender">
 <option value="">Choose your Gender</option>
 <option value="male">Male</option>
 <option value="female">Female</option>
-        </select>
+        </select><br>
 
         <label for="">Are you married?</label>
 
-        <input type="checkbox"/>
+        <input type="checkbox"/><br>
         <label for="">Address</label>
-        <textarea name="address" id="address"></textarea>
+        <textarea name="address" id="address"></textarea><br>
         <label for="">password</label>
-        <input type="password" id="password" name="password" placeholder="Add your password"/>
+        <input type="password" id="password" name="password" placeholder="Add your password"/><br><br><br>
         <button type="submit">Submit</button>
-
     </form>
 </body>
 </html>
