--- a/CSS/task2/index.html
+++ b/CSS/task2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>GRID CONTAINER </h1>
-    <div id="container">
+    <div class="p"><div id="container">
         <div class="a" id="div1">A</div>
         <div class="a" id="div2">B</div>
         <div class="a" id="div3">C</div>
@@ -18,6 +18,7 @@
         <div class="a" id="div7">G</div>
         <div class="a" id="div8">H</div>
         <div class="a" id="div9">I</div>
+    </div>
     </div>
 </body>
 </html>
